2005-09-25  Tom Tromey  <tromey@redhat.com>

	* java/util/Formatter.java (lineSeparator): Use SystemProperties.

2005-09-24  Tom Tromey  <tromey@redhat.com>

	* java/util/FormattableFlags.java (PLUS, SPACE, ZERO, COMMA,
	PAREN): New constants.
	* java/util/UnknownFormatConversionException.java
	(UnknownFormatConversionException): Set exception text.
	* java/util/IllegalFormatException.java (IllegalFormatException):
	New constructor.
	* java/util/FormatFlagsConversionMismatchException.java
	(FormatFlagsConversionMismatchException): Set exception text.
	* java/lang/String.java (format): New methods.
	* java/io/PrintStream.java (printf): New methods.
	(format): Likewise.
	* java/io/PrintWriter.java (printf): New methods.
	(format): Likewise.
	* java/util/Formattable.java: New file.
	* java/util/FormatterClosedException.java (serialVersionUID):
	Fixed.
	* java/util/Formatter.java: New file.

2005-09-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/classpath/ByteArray.java,
	* gnu/classpath/ObjectPool.java,
	* gnu/javax/crypto/DiffieHellmanImpl.java,
	* gnu/javax/crypto/GnuDHPrivateKey.java,
	* gnu/javax/crypto/RSACipherImpl.java,
	* java/lang/Deprecated.java,
	* java/lang/Enum.java,
	* java/lang/Iterable.java,
	* java/lang/MalformedParameterizedTypeException.java,
	* java/lang/Override.java,
	* java/lang/ProcessBuilder.java,
	* java/lang/SuppressWarnings.java,
	* java/lang/annotation/Annotation.java,
	* java/lang/annotation/Documented.java,
	* java/lang/annotation/ElementType.java,
	* java/lang/annotation/IncompleteAnnotationException.java,
	* java/lang/annotation/Inherited.java,
	* java/lang/annotation/Retention.java,
	* java/lang/annotation/RetentionPolicy.java,
	* java/lang/annotation/Target.java,
	* java/lang/reflect/AnnotatedElement.java,
	* java/lang/reflect/GenericDeclaration.java,
	* java/lang/reflect/MalformedParameterizedTypeException.java,
	* java/lang/reflect/TypeVariable.java,
	* java/util/AbstractQueue.java,