@@ -1,3 +1,7 @@
+2005-09-25  Jeroen Frijters  <jeroen@frijters.net>
+
+	* java/lang/MalformedParameterizedTypeException.java: Removed.
+
 2005-09-25  Tom Tromey  <tromey@redhat.com>
 
 	* java/util/Formatter.java (lineSeparator): Use SystemProperties.
